# provenance

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BDD_WIRING_TODO.md  Cargo.toml  GLOBAL_TODO.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  TODO_TEST.md
.docs/: BDD_WIRING.md  SITE_DESIGN.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.specs/: 00_provenance.md  02_worker.md  03_canonicalization.md  04_signing.md  06_workspace.md  10_human_contract.md  10_proofdown.md  11_repo_contract.md  12_canonicalization.md  12_llm_developer_contract.md  14_signing.md  16_worker.md  18_workspace.md  20_testing_and_tiers.md  22_crate_minimums.md  40_accessibility.md  42_human_contract.md  44_repo_contract.md  46_llm_developer_contract.md
crates/badges/: Cargo.toml
crates/badges/src/: lib.rs
crates/badges/tests/: schema_tests.rs
crates/bdd_harness/: Cargo.toml
crates/bdd_harness/src/: lib.rs
crates/frontend/: Cargo.toml  README.md  TODO.md
crates/frontend/.docs/: SITE_DESIGN.md
crates/frontend/.plans/: META_PLAN.md
crates/frontend/src/: lib.rs
crates/manifest_contract/: Cargo.toml
crates/manifest_contract/src/: lib.rs
crates/manifest_contract/tests/: bdd_main.rs  canonicalization.rs  canonicalization_tests.rs  schema_tests.rs  signature_verify.rs
crates/manifest_contract/tests/bdd/: common.rs  mod.rs  steps_manifest.rs  steps_signing.rs
crates/manifest_contract/tests/bdd_world/: mod.rs
crates/manifest_contract/tests/steps/: manifest.rs  mod.rs  signing.rs
crates/proofdown_parser/: Cargo.toml
crates/proofdown_parser/src/: lib.rs
crates/provenance_ssg/: Cargo.toml
crates/provenance_ssg/src/: lib.rs  main.rs  manifest.rs  render.rs  ssg.rs
crates/provenance_ssg/tests/: bdd_main.rs  determinism.rs
crates/provenance_ssg/tests/bdd/: mod.rs  steps_ssg.rs
crates/provenance_ssg/tests/steps/: mod.rs  ssg.rs
crates/renderers/: Cargo.toml
crates/renderers/src/: lib.rs
crates/renderers/tests/: basic.rs  bdd_main.rs  unit.rs
crates/renderers/tests/bdd/: mod.rs  steps_renderers.rs
crates/renderers/tests/bdd_world/: mod.rs
crates/renderers/tests/steps/: renderers.rs
crates/tools/: Cargo.toml
crates/tools/src/: main.rs
e2e/: README.md  cypress.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
e2e/cypress/e2e/: artifact.cy.ts  artifacts_index.cy.ts  assets.cy.ts  badges.cy.ts  home.cy.ts  site_meta.cy.ts  smoke.cy.ts
e2e/cypress/support/: e2e.ts
e2e/scripts/: build-site.js
examples/minimal/.provenance/: manifest.json  manifest.json.sig  public_test_ed25519.key.b64
examples/minimal/ci/: front_page.pml
examples/minimal/ci/coverage/: coverage.json
examples/minimal/ci/tests/: failures.md  summary.json
features/: badges.feature  manifest.feature  proofdown_front_page.feature  renderers.feature  signing.feature  ssg.feature  ssg_render.feature
schemas/: badge.schema.json  manifest.schema.json
xtask/: Cargo.toml
xtask/src/: main.rs
