# NOTE: External submodule: `crates/proofdown_parser` is an independent Rust workspace
# maintained by external consultants. Do NOT add it to `members`. Integrate via
# optional path dependency and feature gating in `crates/provenance_ssg`.
[workspace]
members = [
    "crates/provenance_ssg",
    "crates/manifest_contract",
    "crates/renderers",
    "crates/badges",
    "crates/tools",
    "xtask"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
