[package]
name = "manifest_contract"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
bdd = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
jsonschema = "0.17"
hex = "0.4"
dunce = "1"

[dev-dependencies]
bdd_harness = { path = "../bdd_harness" }
regex = "1"
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
path = "tests/bdd_main.rs"
harness = false
required-features = ["bdd"]
