[package]
name = "provenance_ssg"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.9"
dioxus = { version = "0.5", features = ["macro"] }
dioxus-ssr = "0.5"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
fs_extra = "1"
percent-encoding = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
manifest_contract = { path = "../manifest_contract" }
renderers = { path = "../renderers" }
badges = { path = "../badges" }
proofdown_parser = { path = "../proofdown_parser/crates/proofdown_parser", optional = true }

[features]
external_pml = ["proofdown_parser"]
default = []
