[package]
name = "renderers"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
bdd = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.9"
anyhow = "1"

[dev-dependencies]
bdd_harness = { path = "../bdd_harness" }
regex = "1"

[[test]]
name = "bdd"
path = "tests/bdd_main.rs"
harness = false
required-features = ["bdd"]
